# saline-sdk

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pydoc-markdown.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  commit_docs.yml  publish.yml
demo/block_assets/: agent_tx.py  user_intent.py
demo/mcp_marketmaking/: README.md
demo/mcp_marketmaking/queryswap/: pyproject.toml
demo/mcp_marketmaking/queryswap/src/queryswap/: server.py
demo/mcp_marketmaking/submitswap/: pyproject.toml
demo/mcp_marketmaking/submitswap/src/submitswap/: server.py
demo/mcp_transactions/salinetx/: README.md  pyproject.toml
demo/mcp_transactions/salinetx/src/salinetx/: server.py
demo/swap_whitelist_timeframe/: agent_tx.py  user_intent.py
demo/whitelist_agents/: agent_tx.py  user_intent.py
docs/: README.md  changelog.rst  conf.py  demo.rst  examples.rst  fix_bindings_docstrings.py  index.rst  installation.rst  intents.rst  mock_modules.py  operator_syntax.md  overview.rst  quickstart.rst  requirements.txt  troubleshooting.rst
docs/_static/: custom.css
docs/_templates/: function.rst
docs/api/: account.rst  crypto.rst  index.rst  rpc.rst  saline.rst  transaction.rst
docs/api/transaction/: bindings.rst
examples/: basic_transaction.py  fulfill_faucet_intent.py  install_multisig_intent.py  install_restriction_intent.py  install_swap_intent.py  intent_queries_example.py  query.py  restrictive_intent.py  simple_matcher.py  simple_restriction.py  token_swap.py
examples_saline/: account_management.py  swap_intent.py
saline_sdk/: __init__.py  account.py  saline.py
saline_sdk/crypto/: __init__.py  bls.py  key_derivation.py
saline_sdk/rpc/: __init__.py  client.py  error.py  query_responses.py
saline_sdk/rpc/testnet/: __init__.py  faucet.py
saline_sdk/transaction/: bindings.py  bindings_docstrings.py  instructions.py  serialisation.py  tx.py
tests/: README.md  conftest.py  test_bindings_docs.py
tests/fixtures/: known_good_simple_transfer.json  test_intent.json  transactions.json  transfers.json
tests/integration/: test_client.py  test_transactions.py
tests/unit/: __init__.py  conftest.py
tests/unit/account/: __init__.py  test_account.py  test_account_config.py  test_address.py  test_subaccount.py
tests/unit/crypto/: __init__.py  test_account_tree.py  test_bls.py  test_key_derivation.py
tests/unit/transaction/: __init__.py  test_roundtrips.py  test_simple_transfer.py
