[project]
name = "queryswap"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [ "mcp>=1.6.0","saline-sdk"]
[[project.authors]]
name = "XXXXXXX"
email = "XXXXXXX"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
queryswap = "queryswap:main"
